--- a/src/app/landing/contact/contact.component.css
+++ b/src/app/landing/contact/contact.component.css
@@ -1,155 +1,188 @@
 .box-front {
-    background-color: #e8eaf6;
-    display: flex;
-    flex-direction: column wrap;
-    align-items: center;
-    justify-content: center;
-    }
+  background-color: #e8eaf6;
+  display: flex;
+  flex-direction: column wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.titulo {
+  text-align: center;
+  margin-top: 200px;
+  color: #4d2c91;
+  margin-bottom: -100px;
+}
+
+.imgfondo {
+  width: 500px;
+  position: relative;
+  filter: brightness(1.1);
+  mix-blend-mode: multiply;
+  height: auto;
+  bottom: 30px;
+  margin-top: 0px;
+  margin-left: 0px;
+  margin-bottom: 400px;
+}
+
+.imgfondo:hover {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+  transition: all 0.5s ease 0.5s;
+}
+
+.box-img {
+  background-color: #e8eaf6;
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  justify-content: center;
+  height: 200px;
+  margin-top: 500px;
+  margin-right: 0px;
+  position: relative;
+  right: 50px;
+}
+
+.box-main {
+  background-color: #e8eaf6;
+  display: flex;
+  flex-flow: row;
+}
+
+.box-left {
+  display: flex;
+  justify-content: flex-start;
+  background-color: #e8eaf6;
+  flex-flow: row;
+  margin-bottom: 100px;
+  margin-top: 300px;
+  margin-right: 100px;
+  margin-left: 300px;
+}
+
+.box-right {
+  display: flex;
+  justify-content: flex-end;
+  background-color: #e8eaf6;
+  flex-flow: row;
+  margin-top: 300px;
+  margin-bottom: 0px;
+  margin-left: 120px;
+}
+
+.texto {
+  color: #397dd6;
+  font-size: 20px;
+}
+
+.texto2 {
+  color: #397dd6;
+  font-size: 20px;
+}
+
+.logo {
+  margin: 25px;
+  color: white;
+  text-align: 20px;
+  cursor: pointer;
+  font-size: 30px;
+  text-decoration: none;
+  padding-right: 22px;
+  position: relative;
+}
+
+img {
+  width: 35px;
+  position: relative;
+  left: 15px;
+  bottom: 2px;
+}
+
+.icono-izq {
+  position: relative;
+  left: -10px;
+}
+
+.icono-der {
+  position: relative;
+  left: -10px;
+}
+
+.caja {
+  display: none;
+}
+
+@media only screen and (max-width: 1750px) {
+  .caja {
+    display: block;
+  }
+  .texto {
+    display: block;
+    font-size: 18px;
+    margin-left: 2rem;
+    margin-top: 40px;
+  }
+  .parrafo {
+    display: block;
+  }
+  .imgfondo:hover {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    transition: all 0s ease 0s;
+  }
+  .box-img .imgfondo {
+    width: 400px;
+  }
+
+  .box-img {
+    margin-left: 200px;
+  }
+
+  .box-left {
+    margin-top: 300px;
+    margin-left: 150px;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+  .box-right {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1444px) {
+  .box-left {
+    flex-direction: column;
+    margin-top: 200px;
+  }
+}
+
+@media screen and (max-width: 1184px) {
+  .box-img .imgfondo {
+    width: 300px;
+  }
+  .box-left {
+    margin-right: -100px;
+  }
+  p {
+    font-size: 15px;
+  }
 
   .titulo {
-    text-align: center;
-    margin-top: 150px;
-    color: #4d2c91;
-    margin-bottom: -100px;
-    }
+    font-size: 30px;
+  }
+}
 
-    .imgfondo {
-        width: 500px;
-        position: relative;
-        filter: brightness(1.1);
-        mix-blend-mode: multiply;
-        height: auto;
-        bottom: 30px;
-        margin-top: 0px;
-        margin-left: 0px;
-        margin-bottom: 400px
-    ;
-      }
+@media screen and (max-width: 841px) {
+  .box-left {
+    flex-direction: row;
+    margin-top: 500px;
+  }
 
-    .imgfondo:hover{
-        -webkit-transform:scale(1.1);
-        transform:scale(1.1);
-        transition: all 0.5s ease 0.5s;
-      }
-
-    .box-img{
-        background-color: #e8eaf6;
-        display: flex;
-        flex-flow: row;
-        align-items: center;
-        justify-content: center;
-        height: 200px;
-        margin-top: 500px;
-        margin-right: 0px;
-        position: relative;
-        right: 50px;
-     }
-
-    .box-main {
-          background-color: #e8eaf6;
-          display: flex;
-          flex-flow: row;
-      }
-
-    .box-left{
-        display: flex;
-        justify-content: flex-start;
-        background-color: #e8eaf6;
-        flex-flow: row;
-        margin-bottom: 100px;
-        margin-top: 300px;
-        margin-right: 100px;
-        margin-left: 300px;
-
-      }
-
-    .box-right{
-        display: flex;
-        justify-content: flex-end;
-        background-color: #e8eaf6;
-        flex-flow: row;
-        margin-top: 300px;
-        margin-bottom: 0px;
-        margin-left: 100px;
-      }
-
-    .texto {
-          color: #397dd6;
-          font-size: 20px;
-      }
-
-    .texto2 {
-        color: #397dd6;
-        font-size: 20px;
-    }
-
-    .logo{
-      margin: 25px;
-      color:white;
-      text-align: 20px;
-      cursor: pointer;
-      font-size: 30px;
-      text-decoration: none;
-      padding-right: 22px;
-      position: relative;
-    }
-
-    img{
-      width: 35px;
-      position: relative;
-      left: 15px;
-      bottom: 2px;
-    }
-
-    .icono-izq {
-      position: relative;
-      left: -10px;
-    }
-
-    .icono-der {
-      position: relative;
-      left: -10px;
-    }
-
-    .caja {
-      display: none;
-    }
-
-    @media only screen and (max-width: 1600px) {
-      .caja {
-        display: block;
-      }
-      .texto {
-        display: block;
-        font-size: 18px;
-        margin-left: 2rem;
-      }
-      .parrafo {
-        display: block;
-      }
-      .imgfondo:hover{
-        -webkit-transform:scale(1.0);
-        transform:scale(1.0);
-        transition: all 0.0s ease 0.0s;
-      }
-      .box-img .imgfondo {
-        width: 400px;
-      }
-      .box-left {
-        flex-wrap: wrap;
-        margin-left: 100px;
-        margin-top: 200px;
-      }
-      .box-right {
-        display: none;
-      }
-    }
-    
-    @media only screen and (min-width: 1196px) and (max-width: 1600px) {
-
-      .box-left {
-        margin-top: 300px;
-      }
-    }
-
-    
+  .box-img .imgfondo {
+    position: relative;
+    margin-left: -700px;
+    margin-top: -100px;
+  }
+}
