--- a/src/app/wallet/wallet-page/wallet-page.component.html
+++ b/src/app/wallet/wallet-page/wallet-page.component.html
@@ -1,1 +1,9 @@
+<app-header-wallet [templateTres]="headerComponentWallet"></app-header-wallet>
+
 <h1>Hola desde la Pagina de la Billetera Digital</h1>
+
+<ng-template #headerComponentWallet>
+    <a appHeader (click)="redirectToWallet()" class="logo"
+      >PIL MONEY<img appLogo src="/assets/imagenes/money-check-alt-solid.svg"
+    /></a>
+  </ng-template>
