--- a/src/app/wallet/pages/transferencia/transferencia.component.html
+++ b/src/app/wallet/pages/transferencia/transferencia.component.html
@@ -1,1 +1,55 @@
-<p>transferencia works!</p>
+
+
+
+<div class="container table-container" >
+
+    <div class="row align-items-center">
+        <h2 class="agendaTitulo">Mi Agenda</h2>
+    <div class="col-sm-6 tabla">
+ 
+    
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
+    
+            <!--- Note that these columns can be defined in any order.
+                The actual rendered columns are set as a property on the row definition" -->
+        
+            <!-- Position Column -->
+            <ng-container matColumnDef="nombre">
+            <th mat-header-cell *matHeaderCellDef> Nombre </th>
+            <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+            </ng-container>
+        
+            <!-- Name Column -->
+            <ng-container matColumnDef="alias">
+            <th mat-header-cell *matHeaderCellDef> Alias </th>
+            <td mat-cell *matCellDef="let element"> {{element.alias}} </td>
+            </ng-container>
+        
+            <!-- Weight Column -->
+            <ng-container matColumnDef="cvu">
+            <th mat-header-cell *matHeaderCellDef> CVU </th>
+            <td mat-cell *matCellDef="let element"> {{element.cvu}} </td>
+            </ng-container>
+        
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
+
+        <div class="col-sm-6">
+            <h2 class="agendaTitulo">Nuevo Contacto</h2>
+            <p>Nombre Completo</p>
+            <mat-form-field appearance="fill" floatLabel="always">
+                <input matInput type="text" class="example-right-align" placeholder="Nombre">
+            </mat-form-field>
+            <p>CVU / Alias</p>
+            <mat-form-field appearance="fill" floatLabel="always">
+                <input matInput type="string" class="example-right-align" placeholder="CVU / ALIAS">
+            </mat-form-field>
+            <button class="botonConfirmar" mat-flat-button>Confirmar</button>
+            
+        </div>
+        </div>
+        <button class="botonSiguiente" mat-flat-button routerLink='/wallet/transferir'>Siguiente →</button>
+    
+    </div>
