--- a/src/app/wallet/pages/compra/compra.component.html
+++ b/src/app/wallet/pages/compra/compra.component.html
@@ -1,1 +1,51 @@
-<p>compra works!</p>
+<div class="container-fluid text-center">
+  <h1 class="mb-5">¡Comprá y vendé dólares<br>o Crypto al mejor precio!</h1>
+  <mat-form-field appearance="fill">
+    <mat-label>Selecciona una opción</mat-label>
+    <mat-select [(ngModel)]="opcionElegida" name="item">
+      <mat-option *ngFor="let item of opciones" [value]='item.value'>
+        {{item.viewValue}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+  <h6 class="text-danger mb-5">
+      {{validarCotizacion(opcionElegida)}}
+  </h6>
+  <div *ngIf="opcionElegida !== -1">
+    <section *ngIf="opcionElegida !== 1 && opcionElegida !== 3;else venta"
+             class="justify-content-evenly">
+      <div class="parte1">
+        <mat-form-field class="example-full-width" appearance="fill">
+          <mat-label>Cuanto vas a comprar</mat-label>
+          <input matInput placeholder="Monto..." type="number" autocomplete="off" name="monto" [(ngModel)]='monto'>
+        </mat-form-field>
+      </div>
+      <mat-icon class="icono">arrow_right_alt</mat-icon>
+      <div class="parte2">
+        <mat-form-field class="example-full-width" appearance="fill">
+          <mat-label>Cuanto vas a pagar</mat-label>
+          <input matInput placeholder="Monto..." [value]="operacion(monto)" type="number" readonly>
+        </mat-form-field>
+      </div>
+    </section>
+    <ng-template #venta>
+      <section class="justify-content-evenly">
+        <div class="parte1">
+        <mat-form-field class="example-full-width" appearance="fill">
+          <mat-label>Cuanto vas a vender</mat-label>
+          <input matInput placeholder="Monto..." type="number" autocomplete="off" name="monto" [(ngModel)]='monto'>
+        </mat-form-field>
+        </div>
+        <mat-icon class="icono">arrow_right_alt</mat-icon>
+        <div class="parte2">
+        <mat-form-field class="example-full-width" appearance="fill">
+          <mat-label>Cuanto vas a recibir</mat-label>
+          <input matInput placeholder="Monto..." [value]="operacion(monto)" type="number" readonly>
+        </mat-form-field>
+        </div>
+      </section>
+    </ng-template>
+
+  </div>
+
+</div>
